--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ version: 2.1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
+
 jobs:
   checkout-code:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
@@ -18,7 +19,7 @@ jobs:
 
   test-code:
     docker:
-      - image: circleci/node:stable
+      - image: circleci/node:18.04
     steps:
       - checkout
       - run:
