--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,18 +8,7 @@ orbs:
   node: circleci/node@5.1.0
 
 jobs:
-  checkout-code:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
-    steps:
-      - checkout
-      - run: echo "Checking out code"
-
-  test-code:
+  deploy:
     docker:
       - image: cimg/base:stable
     steps:
@@ -32,6 +21,8 @@ jobs:
           name: Run Tests
           command: npm run test
           working_directory: ./app
+      - run: echo $SECRET
+
 
 
 
@@ -40,5 +31,7 @@ jobs:
 workflows:
   deploy-workflow:
     jobs:
-      - checkout-code
-      - test-code
+      - deploy:
+          filters:
+            branches:
+              only: main
