--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,17 +28,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: apt-get update
-          command: sudo apt-get update
-      - run:
           name: Install AWS CLI
-          command: sudo apt-get install awscli
+          command: sudo apt-get update && sudo apt-get install awscli
       - run:
           name: Config AWS account
           command: aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID && aws configure set aws_secret_access_key $AWS_USER_SECRET_ID && aws configure set default.region $AWS_REGION
       - run:
           name: Authenticate with ECR
-          command: aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_USER_ID.dkr.ecr.$AWS_REGION.amazonaws.com/jm-develops-test
+          command: echo $AWS_USER_SECRET_ID | docker login --username AWS --password-stdin $AWS_USER_ID.dkr.ecr.$AWS_REGION.amazonaws.com/jm-develops-test
 
 
 
