fix: add - setup_remote_docker option

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
+      - setup_remote_docker
       - run:
           name: Install AWS CLI
           command: sudo apt-get update && sudo apt-get install awscli
