--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,23 +45,24 @@ jobs:
           name: Push to ECR
           command: docker tag app:latest $AWS_USER_ID.dkr.ecr.$AWS_REGION.amazonaws.com/jm-develops-test:latest && docker push $AWS_USER_ID.dkr.ecr.$AWS_REGION.amazonaws.com/jm-develops-test:latest
 
-    create-infra:
-      docker:
-        - image: cimg/base:stable
-      steps:
-        - checkout
-        - setup_remote_docker
-        - run: 
-            name: Install Terraform dependencies
-            comand: sudo apt-get update && sudo apt-get install -y unzip
+  run-terraform:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - setup_remote_docker
 
-        - run:
-            name: Install Terraform
-            command:  curl -fsSL https://releases.hashicorp.com/terraform/0.12.29/terraform_0.12.29_linux_amd64.zip -o terraform.zip && sudo unzip terraform.zip -d /usr/local/bin
+      - run:
+          name: Install Terraform dependencies
+          command:  sudo apt-get update && sudo apt-get install -y unzip
 
-        - run:
-            name: Terraform version
-            command:  terraform --version
+      - run:
+          name: Install Terraform
+          command:  curl -fsSL https://releases.hashicorp.com/terraform/0.12.29/terraform_0.12.29_linux_amd64.zip -o terraform.zip && sudo unzip terraform.zip -d /usr/local/bin
+
+      - run:
+          name: Terraform version
+          command:  terraform --version
           
          
 
@@ -78,7 +79,7 @@ workflows:
           filters:
             branches:
               only: master
-      - create-infra:
+      - run-terraform:
           requires:
             - test
           filters:
