feat: run terraform

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,10 @@ jobs:
       - run:
           name: Terraform version
           command:  terraform --version
+      
+      - run: terraform init
+      - run: terraform plan
+      - run: terraform apply -var="TF_VAR_ssh_key_public=$TF_VAR_SSH_KEY_PUBLIC" -auto-approve
           
          
 
