--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,10 @@ jobs:
       - run:
           name: Terraform version
           command:  terraform --version
+
+      - run:
+          name: Config AWS account
+          command: aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID && aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY && aws configure set default.region $AWS_REGION
       
       - run: 
           name: Terraform init
