fix: Ansible hosts file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,7 +112,7 @@ jobs:
 
       - run: 
           name: Ansible hosts file
-          command: echo hosts.ini
+          command: cat hosts.ini
           working_directory: ./terraform/dev
       
       - run:
