--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,18 +86,9 @@ jobs:
           working_directory: ./terraform/dev
 
       - run:
-          name: Get instance IP
-          command: instance_ip=$(terraform output DEVELOP_IP)
-          working_directory: ./terraform/dev
-
-      - run:
           name: Create SSH key file
           command: echo "$SSH_KEY_PRIVATE" > ssh_key && chmod 400 ssh_key
           working_directory: ./terraform/dev
-      - persist_to_workspace:
-              root: .
-              paths:
-                - ssh_key
 
       - run:
           name: Install Ansible
@@ -112,11 +103,12 @@ jobs:
           name: Create Ansible hosts file
           command: echo "[Terraform_ansible]" > hosts.ini && echo "$(terraform output DEVELOP_IP)" >> hosts.ini
           working_directory: ./terraform/dev
-      - persist_to_workspace:
-              root: .
-              paths:
-                - hosts.ini
 
+      - persist_to_workspace:
+              root: ./terraform/dev
+              paths:
+              - hosts.ini
+              - ssh_key
 
       - run: 
           name: Ansible hosts file
@@ -140,8 +132,9 @@ jobs:
           command: cat ssh_key
           working_directory: ./terraform/dev
       - run: 
-          name: get ssh key
-          command: cat ssh_key
+          name: get hosts.ini
+          command: cat hosts.ini
+          working_directory: ./terraform/dev
          
 
 
