--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ jobs:
 
       - run: 
           name: get tf ip
-          command: cat $TF_IP
+          command: echo $TF_IP
 
 
       
@@ -109,7 +109,7 @@ jobs:
 
       - run: 
           name: get tf ip
-          command: cat $TF_IP
+          command: echo $TF_IP
 
       - run:
           name: Create Ansible hosts file
@@ -122,6 +122,7 @@ jobs:
       - run:
           name: get hosts file
           command: cat hosts.ini
+          working_directory: ./terraform/dev
 
       - run:
           name: Add host to known_hosts
