--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,32 +85,6 @@ jobs:
           command: terraform apply -auto-approve -var="TF_VAR_ssh_key_public=$TF_VAR_SSH_KEY_PUBLIC"
           working_directory: ./terraform/dev
 
-
-      - run:
-          name: Save IP to environment variable
-          command: echo 'export TF_IP=$(terraform output DEVELOP_IP)' >> $BASH_ENV
-
-      - run: 
-          name: get tf ip
-          command: echo $TF_IP
-
-
-      
-
-  run-ansible: 
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - checkout
-      - setup_remote_docker
-
-      - attach_workspace:
-          at: ./terraform/dev
-
-      - run: 
-          name: get tf ip
-          command: echo $TF_IP
-
       - run:
           name: Create Ansible hosts file
           command: |
@@ -118,16 +92,11 @@ jobs:
             echo "[Terraform_ansible]" > hosts.ini
             echo "$TF_IP" >> hosts.ini
           working_directory: ./terraform/dev
-        
-      - run:
-          name: get hosts file
-          command: cat hosts.ini
-          working_directory: ./terraform/dev
 
       - run:
           name: Add host to known_hosts
-          command: ssh-keyscan -H "$TF_IP >> ~/.ssh/known_hosts
-            
+          command: ssh-keyscan -H "$(terraform output DEVELOP_IP)" >> ~/.ssh/known_hosts
+
 
       - run:
           name: Install Ansible
@@ -147,6 +116,30 @@ jobs:
           working_directory: ./terraform/dev
           environment:
             ANSIBLE_HOST_KEY_CHECKING: "false"
+
+      
+
+  run-ansible: 
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - setup_remote_docker
+
+      - attach_workspace:
+          at: ./terraform/dev
+
+      - run: 
+          name: get tf ip
+          command: echo $TF_IP
+        
+      - run:
+          name: get hosts file
+          command: cat hosts.ini
+          working_directory: ./terraform/dev
+            
+
+     
 
 
 # Orchestrate jobs using workflows
