feat: get terraform ip

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,11 @@ jobs:
           working_directory: ./terraform/dev
 
       - run:
+          name: Get Terraform IP
+          command: echo $(terraform output DEVELOP_IP)
+          working_directory: ./terraform/dev
+      
+      - run:
           name: Add host to known_hosts
           command: ssh-keyscan -H $(terraform output DEVELOP_IP) >> ~/.ssh/known_hosts
 
