fix: remove add host to known_hosts step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,9 +98,9 @@ jobs:
           command: echo $(terraform output DEVELOP_IP)
           working_directory: ./terraform/dev
       
-      - run:
-          name: Add host to known_hosts
-          command: ssh-keyscan -H $(terraform output DEVELOP_IP) >> ~/.ssh/known_hosts
+      # - run:
+      #     name: Add host to known_hosts
+      #     command: ssh-keyscan -H $(terraform output DEVELOP_IP) >> ~/.ssh/known_hosts
 
 
       - run:
