--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,9 +113,9 @@ jobs:
           command: cat hosts.ini
           working_directory: ./terraform/dev
 
-      - run:
-          name: Add host to known_hosts
-          command: ssh-keyscan -H "44.221.152.115" >> ~/.ssh/known_hosts
+      # - run:
+      #     name: Add host to known_hosts
+      #     command: ssh-keyscan -H "44.221.152.115" >> ~/.ssh/known_hosts
 
       - run:
           name: Install Ansible
