--- a/terraform/dev/ansible.cfg
+++ b/terraform/dev/ansible.cfg
@@ -1,4 +1,4 @@
-[Terraform_ansible]
-host_key_checking = False
+[defaults]
+host_key_checking = false
 remote_user = ubuntu
 private_key_file = ec2.pem
