--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,15 +107,6 @@ jobs:
 
       - attach_workspace:
           at: ./terraform/dev
-        
-      - run:
-          name: get hosts file
-          command: cat hosts.ini
-          working_directory: ./terraform/dev
-
-      # - run:
-      #     name: Add host to known_hosts
-      #     command: ssh-keyscan -H "44.221.152.115" >> ~/.ssh/known_hosts
 
       - run:
           name: Install Ansible
@@ -131,7 +122,7 @@ jobs:
             
       - run:
           name: Ansible playbook
-          command: sudo ansible-playbook -i hosts.ini playbook.yml 
+          command: sudo ansible-playbook -i hosts.ini playbook.yml  -vvv
           working_directory: ./terraform/dev
           environment:
             ANSIBLE_HOST_KEY_CHECKING: "false"
