--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,7 +122,7 @@ jobs:
 
       - run:
           name: Create ssh file
-          command: ${SSH_KEY} > ~/.ssh/id_rsa
+          command: echo ${SSH_KEY} > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
 
       - run:
           name: ls ssh keys
