--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,7 +134,7 @@ jobs:
 
       - run:
           name: Download ssh key
-          command: aws s3 cp s3://jm-develops-test/ssh.pem ./ssh.pem
+          command: aws s3 cp s3://terraform-jm-devops-dev-terraform-state/ssh.pem ./ssh.pem
 
       - run:
           name: ls ssh keys
