--- a/terraform/dev/playbook.yml
+++ b/terraform/dev/playbook.yml
@@ -38,3 +38,42 @@
     - name: Install Docker Module for Python
       pip:
         name: docker
+
+    - name: Install AWS CLI
+      apt: 
+        name: awscli
+        state: latest
+
+    - name: Config AWS account access key
+      command: aws configure set aws_access_key_id {{ AWS_ACCESS_KEY }}
+    - name: Config AWS account secret access key
+      command: aws configure set aws_secret_access_key {{ AWS_SECRET_KEY }}
+    - name: Config AWS account default region
+      command: aws configure set default.region {{ AWS_REGION }}
+
+    - name: Authenticate with ECR
+      shell: "aws ecr get-authorization-token  \
+        --region {{ AWS_REGION }}"
+      register: ecr_command
+
+    - set_fact:
+        ecr_authorization_data: "{{ (ecr_command.stdout | from_json).authorizationData[0] }}"
+
+    - set_fact:
+        ecr_credentials: "{{ (ecr_authorization_data.authorizationToken | b64decode).split(':') }}"
+
+    - name: docker_repository - Log into ECR registry and force re-authorization
+      docker_login:
+        registry_url: "{{ ecr_authorization_data.proxyEndpoint.rpartition('//')[2] }}"
+        username: "{{ ecr_credentials[0] }}"
+        password: "{{ ecr_credentials[1] }}"
+        reauthorize: yes
+
+    - name: Run docker container
+      docker_container:
+        name: project-container
+        image: "{{ AWS_USER_ID }}.dkr.ecr.{{AWS_REGION}}.amazonaws.com/jm-develops-test:latest"
+        state: started
+        restart_policy: always
+        ports:
+          - "3000:3000"
