--- a/terraform/dev/playbook.yml
+++ b/terraform/dev/playbook.yml
@@ -74,6 +74,9 @@
         name: project-container
         image: "{{ AWS_USER_ID }}.dkr.ecr.{{AWS_REGION}}.amazonaws.com/jm-develops-test:latest"
         state: started
+        restart: yes
+        recreate: yes
+        pull: yes
         restart_policy: always
         ports:
           - "3000:3000"
